# SC23-AMRIC

./: README.md  compressor.sh  hdf5.sh  mpi_env.sh  nyx.sh  openmpi.sh  qcat.sh  warpx.sh
Nyx/Exec/AMR-density/: GNUmakefile  bash.sh  inputs  jsbash.sh  runnyx.sh  sz3-pad.sh  sz3.sh
Nyx/Exec/AMR-density/chk00210/: CPUtime  FabArrayHeaders.txt  Header  comoving_a  job_info
Nyx/Exec/AMR-density/meta/: meta_0.txt  sp_0.txt
Nyx/Exec/AMR-density/otfile/: io.sh  readAmrex.py  readSZInterp.py
Nyx/Exec/AMR-density/padmeta/: meta_1.txt  sp_1.txt
Nyx/Exec/AMR-density/run/: 64-decomp.sh  cr.py  decomp.sh  qualityCR.sh  runlog
Nyx/Exec/LyA/otfile/: adp-.txt  adp-0.txt  nocomp-0.txt  (+2 more)
Nyx/subprojects/: build-sun.sh
SZ3/tools/H5Z-SZ3/: CMakeLists.txt
SZ_SLE/: .gitignore
SZ_SLE/include/SZ3/: version.hpp
SZ_SLE/tools/H5Z-SZ3/: CMakeCache.txt  CMakeLists.txt  HDF5SZ3.cmake  Makefile  cmake_install.cmake
amrex/Src/Amr/: AMReX_AmrLevel.cpp
orisz3/tools/H5Z-SZ3/: CMakeLists.txt
orisz3/tools/H5Z-SZ3/test/: CMakeLists.txt  pad-adp-c.cpp  pad-adp.cpp  pad-f.cpp  pad.cpp  ss-adp.cpp  ss-f.cpp  ss-w.cpp  ss.cpp  stack-f.cpp  stack-w.cpp  stack.cpp
warpx_directory/WarpX/: GNUmakefile  base.sh  bash.sh  inputs  jsbash.sh  runwarpx.sh  sz2.sh  sz3.sh
warpx_directory/WarpX/diags/: 64-decomp.sh  decomp.sh
warpx_directory/WarpX/otfile/: comp-0.txt  comp-1.txt  comp-2.txt  nocomp-0.txt  nocomp-1.txt  nocomp-2.txt  readSZLR.py  readnocomp.py  readtxt.py  sz2-0.txt  sz2-1.txt  sz2-2.txt  sz3-0.txt
warpx_directory/WarpX/temp-chk001000/: WarpXHeader  warpx_job_info
(+1031 files in other folders)
